--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#DDF"
     tools:context="com.lfm.rxdemo.fragment.SearchFragment">
 
     <LinearLayout
@@ -29,11 +30,4 @@
             android:layout_height="wrap_content"
             android:text="@string/search_button" />
     </LinearLayout>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/search_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/search_bar" />
-
 </RelativeLayout>
