--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,13 @@
 
     <fragment
         android:id="@+id/fragment_search"
-        android:name="com.lfm.rxdemo.fragment.SearchFragment"
+        android:name="com.lfm.rxdemo.fragment.InputFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <fragment
         android:id="@+id/fragment_list"
-        android:name="com.lfm.rxdemo.fragment.ListFragment"
+        android:name="com.lfm.rxdemo.fragment.SearchListFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
