--- a/app/src/main/res/layout/fragment_input.xml
+++ b/app/src/main/res/layout/fragment_input.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#DDF"
-    tools:context="com.lfm.rxdemo.fragment.SearchFragment">
+    tools:context=".fragment.InputFragment">
 
     <LinearLayout
         android:id="@+id/search_bar"
@@ -17,7 +17,7 @@
             android:layout_weight="1">
 
             <EditText
-                android:id="@+id/search_edit"
+                android:id="@+id/input_edit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/search"
@@ -25,7 +25,7 @@
         </android.support.design.widget.TextInputLayout>
 
         <Button
-            android:id="@+id/search_button"
+            android:id="@+id/input_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/search_button" />
