--- a/app/src/main/res/layout/fragment_search_list.xml
+++ b/app/src/main/res/layout/fragment_search_list.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FDD"
-    tools:context="com.lfm.rxdemo.fragment.SearchFragment">
+    tools:context=".fragment.InputFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/search_list"
