--- a/app/src/main/res/layout/fragment_input.xml
+++ b/app/src/main/res/layout/fragment_input.xml
@@ -1,8 +1,9 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#DDF"
+    android:background="@color/search_input"
     tools:context=".fragment.InputFragment">
 
     <LinearLayout
@@ -21,13 +22,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/search"
-                android:inputType="text" />
+                android:inputType="text"/>
         </android.support.design.widget.TextInputLayout>
 
         <Button
             android:id="@+id/input_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/search_button" />
+            android:text="@string/search_button"/>
     </LinearLayout>
 </RelativeLayout>
